# CS7830-Assignment-2

./: Untitled.ipynb  assignment2-DeNezza.ipynb  assignment2-DeNezza.py  pyproject.toml
.ipynb_checkpoints/: assignment2-DeNezza-checkpoint.ipynb
drug_consumption/: Readme.txt
figures/: descriptive_statistics.csv
figures/correlations/: corr_matrix.csv
figures/frequencies/: Alcohol.csv  Cannabis.csv  LSD.csv  Mushrooms.csv  Nicotine.csv
src/: exploration.py  main.py
