[project]
name = "cs7830-assignment-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "ipympl>=0.10.0",
    "jupyter-client>=8.8.0",
    "jupyterlab>=4.5.6",
    "jupytext>=1.19.1",
    "matplotlib>=3.10.8",
    "matplotlib-backend-kitty>=2.1.2",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "scipy>=1.17.1",
    "scipy-stubs~=1.17.1",
    "seaborn>=0.13.2",
]
